opam-version: "2.0"

name: "fmlib"

synopsis: "Functional monadic library"

description: """

Library which is completely functional and monadic. It features

- Monadic parsing functions with combinators suitable for indentation sensitive
  parsing.

- Pretty printing functions.
"""

maintainer: "Helmut Brandl <helmut.brandl@gmx.net>"

authors: [
    "Helmut Brandl <helmut.brandl@gmx.net>"
    ]

license: "BSD-3"

dev-repo: "git+https://github.com/hbr/fmlib.git"

bug-reports: "http://github.com/hbr/fmlib"


build: [
    ["dune" "subst"] {pinned}       # ??
    ["dune" "build" "@install" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]


depends: [
    "ocaml" {>= "4.08.0"}
    "ocamlfind" {build}
    "dune" {build}
    # "odoc" {with-doc}
    "odoc" {build}
    "ppx_inline_test" {build}
    "js_of_ocaml"
    "js_of_ocaml-ppx"
]
