opam-version: "2.0"

synopsis: "Standard datatypes of Fmlib"

description: """

Some small wrappers around ocamls stdlib modules to facilitate more functional
programming. E.g. the module 'Option' and 'Result' support the 'let*' operator.
The module 'Array' has a 'push' operation to append functionally elements at the
end.

"""


maintainer: "Helmut Brandl <helmut.brandl@gmx.net>"

authors: [ "Helmut Brandl <helmut.brandl@gmx.net>" ]

license: "BSD-3-Clause"
homepage: "https://github.com/hbr/fmlib"
dev-repo: "git+https://github.com/hbr/fmlib.git"
bug-reports: "https://github.com/hbr/fmlib/issues"


build: [
    ["dune" "subst"] {dev}
    ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]


depends: [
    "ocaml" {>= "4.08.0"}
    "dune" {>= "1.10"}
    "odoc" {with-doc}
    "ppx_inline_test" {>= "v0.12.0"}
]
