(library
  (public_name fmlib_browser)
  (name fmlib_browser)
  (libraries fmlib_js)
  (preprocess (pps ppx_inline_test))
  (inline_tests (modes js))
)


(documentation
  (mld_files
    index
    doc
    doc_overview
    doc_getting_started
    doc_single_page_application
    doc_detailed_overview
    doc_reference_elements
  )
  (package fmlib_browser)
)
