(executable
  (name temperature)
  (modules temperature)
  (modes js)
  (libraries fmlib_browser)
)

(rule
  (targets temperature.js) (deps temperature.bc.js)
  (mode (promote (until-clean)))
  (action (copy temperature.bc.js temperature.js))
)




(executable
  (name timer)
  (modules timer)
  (modes js)
  (libraries fmlib_browser)
)

(rule
  (targets timer.js) (deps timer.bc.js)
  (mode (promote (until-clean)))
  (action (copy timer.bc.js timer.js))
)




(executable
  (name flight)
  (modules flight)
  (modes js)
  (libraries fmlib_browser)
)

(rule
  (targets flight.js) (deps flight.bc.js)
  (mode (promote (until-clean)))
  (action (copy flight.bc.js flight.js))
)




(executable
  (name circles)
  (modules circles)
  (modes js)
  (libraries fmlib_browser)
)

(rule
  (targets circles.js) (deps circles.bc.js)
  (mode (promote (until-clean)))
  (action (copy circles.bc.js circles.js))
)




(executable
  (name reference)
  (modules reference)
  (modes js)
  (libraries fmlib_browser)
)

(rule
  (targets reference.js) (deps reference.bc.js)
  (mode (promote (until-clean)))
  (action (copy reference.bc.js reference.js))
)




(executable
  (name spreadsheet)
  (modules spreadsheet)
  (modes js)
  (libraries fmlib_browser fmlib_parse)
)

(rule
  (targets spreadsheet.js) (deps spreadsheet.bc.js)
  (mode (promote (until-clean)))
  (action (copy spreadsheet.bc.js spreadsheet.js))
)




(executable
  (name file_select)
  (modules file_select)
  (modes js)
  (libraries fmlib_browser)
)

(rule
  (targets file_select.js) (deps file_select.bc.js)
  (mode (promote (until-clean)))
  (action (copy file_select.bc.js file_select.js))
)





(executable
   (name single_page)
   (modules
     single_page
     single_page_counter
     single_page_clock
     single_page_die
     single_page_message
     single_page_events
     single_page_input
     single_page_http
   )
   (modes js)
   (libraries fmlib_browser)
)

(rule
   (targets single_page.js)
   (deps single_page.bc.js)
   (mode (promote (until-clean)))
   (action (copy %{deps} %{targets}))
)

(rule
   (deps (file single_page.js))
   (action
   (with-stdout-to
     assets.ml
     (progn
       (echo "let js = {|")
       (cat single_page.js)
       (echo "|}\n")
       (echo "let html = {|")
       (cat single_page.html)
       (echo "|}\n"))
      )
   )
)

(executable
  (name single_page_backend)
  (modules single_page_backend assets)
  (libraries fmlib_std unix)
  (promote (until-clean))
)
